--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -30,6 +30,7 @@ html {
 	font-size: 24px;
 
 	scroll-behavior: smooth;
+	background-color: black;
 }
 body,header,main,aside,footer,nav{
 	display: flex;
