added email linkedin github links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,13 @@
 				<h1>{{ site.title }} <span class="decor">website</span></h1>
 				<h2>{{ site.subtitle }}</h2>
 				<div class="row">
-					<a href="http://www.google.com">
+					<a href="z.preisler@gmail.com">
 						<span class=logo_char>@<span>
 					</a>
-					<a href="http://www.google.com">
+					<a href="www.linkedin.com/in/zdenek-preisler-40685813">
 						<img src="/assets/logos/LI-In-Bug.png" class="logo"></img>
 					</a>
-					<a href="http://www.google.com">
+					<a href="https://github.com/zpreisler">
 						<img src="../assets/logos/GitHub-Mark-64px.png" class="logo"></img>
 					</a>
 				</div>
@@ -48,10 +48,10 @@
 			<a href="http://www.google.com">
 				<div class="logo_char">@</div>
 			</a>
-			<a href="http://www.google.com">
+			<a href="www.linkedin.com/in/zdenek-preisler-40685813">
 				<img href="www.google.com" src="../assets/logos/LI-In-Bug.png" class="logo"> </img>
 			</a>
-			<a href="http://www.google.com">
+			<a href="https://github.com/zpreisler">
 				<img src="../assets/logos/GitHub-Mark-Light-64px.png" class="logo"> </img>
 			</a>
 		</footer>
