--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 					<a href="z.preisler@gmail.com">
 						<span class=logo_char>@<span>
 					</a>
-					<a href="www.linkedin.com/in/zdenek-preisler-40685813">
+					<a href="https://www.linkedin.com/in/zdenek-preisler-40685813/">
 						<img src="/assets/logos/LI-In-Bug.png" class="logo"></img>
 					</a>
 					<a href="https://github.com/zpreisler">
@@ -48,7 +48,7 @@
 			<a href="http://www.google.com">
 				<div class="logo_char">@</div>
 			</a>
-			<a href="www.linkedin.com/in/zdenek-preisler-40685813">
+			<a href="https://www.linkedin.com/in/zdenek-preisler-40685813/">
 				<img href="www.google.com" src="../assets/logos/LI-In-Bug.png" class="logo"> </img>
 			</a>
 			<a href="https://github.com/zpreisler">
